main_svc: добавлены события